Alignment fixes

--- a/src/components/navigation/menuToggle/MenuToggle.css
+++ b/src/components/navigation/menuToggle/MenuToggle.css
@@ -20,7 +20,7 @@
 }
 
 .MenuToggle span.active:nth-child(1) {
-    transform: translate3d(0, 13px, 0) rotate(400deg);
+    transform: translate3d(0, 13px, 0) rotate(405deg);
     width: 70%;
     height: 3px;
 }
@@ -32,7 +32,7 @@
 }
 
 .MenuToggle span.active:nth-child(3) {
-    transform: translate3d(0, -13px, 0) rotate(-400deg);
+    transform: translate3d(0, -13px, 0) rotate(-405deg);
     width: 70%;
     height: 3px;
 }
