--- a/src/hoc/layout/Layout.css
+++ b/src/hoc/layout/Layout.css
@@ -1,10 +1,11 @@
 .Content {
     margin: 4rem 4rem 0 4rem;
-    padding: 5rem 0 2rem 0;
+    padding: 4rem 0 2rem 0;
 }
 
 @media (max-width: 600px) {
     .Content {
         margin: 4rem 1rem 0 1rem;
+        padding: 2rem 0 2rem 0;
     }
 }
